--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   text-align: center;
   text-transform: uppercase;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-position: center;
   height: 100vh;
   width: 100vw;
   color: #f50707;
