--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   text-transform: uppercase;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   height: 100vh;
   width: 100vw;
   color: #f50707;
